--- a/css/abrigos-1.css
+++ b/css/abrigos-1.css
@@ -38,3 +38,19 @@
     display: grid;
     grid-template-columns: 10% 80% 10%
 }
+.detalle{
+    align-items: center;
+}
+.titulo-producto{
+    font-size: 25px;
+}
+.atras{
+    font-size: 25px;
+    background: green;
+    border-radius: 4px;
+    border: none;
+    gap:2px;
+}
+.atras:hover{
+    cursor: pointer;
+}
