--- a/css/carrito.css
+++ b/css/carrito.css
@@ -4,5 +4,15 @@
 }
 .compras{
     display: grid;
-    grid-template-columns: 25% 20% 10% 10% 10% 25%;
+    grid-template-columns: 30% 20% 10% 10% 10% 20%;
+    align-items: center;
+    margin-top: 30px;
+}
+.productos{
+ 
+}
+
+.ing{
+    width: 90px;
+    height: auto;
 }
